--- a/css/drooids.css
+++ b/css/drooids.css
@@ -1210,3 +1210,21 @@ footer .footer-below {
   top: 295px;
   background-color: transparent !important;
 }
+
+
+.about .profile-picture {
+  vertical-align: middle;
+  padding: 5px;
+  border: 1px solid rgb(204, 204, 204);
+  box-shadow: 0px 0px 3px rgba(51, 51, 51, 0.2);
+  -ms-transform: rotate(1deg);
+  /* -webkit-transform: rotate(1deg); */
+  /* transform: rotate(1deg); */
+  margin-bottom: 10px;
+}
+.about .profile-overview h3 {
+    margin-top: 0px;
+}
+.about .profile-overview th {
+    padding: 8px 8px 8px 0px;
+}
