Add mobile pictures - #14.

--- a/css/drooids.css
+++ b/css/drooids.css
@@ -465,6 +465,10 @@ footer .up:hover .image_off {
     margin-bottom: 30px;
 }
 
+.portfolio-modal .modal-content img.mobile {
+    width: 30%;
+}
+
 .portfolio-modal .modal-content .item-details {
     margin: 30px 0;
 }
