task: hide company trust - #22 and add more images to olm2 - #20

--- a/css/drooids.css
+++ b/css/drooids.css
@@ -1112,7 +1112,7 @@ footer .up:hover .image_off {
 */
 
 .owl-theme .owl-controls{
-    margin-top: 10px;
+    margin-top: 0px !important;
     text-align: center;
 }
 
